--- a/termini.html
+++ b/termini.html
@@ -16,7 +16,7 @@
                 WhoAmI
             </h2>
             <p>
-                Marco Rondelli [<mark>founder</mark>]<br> CS University student at "Universita' degli studi di Parma"<br> Currently having no personal projects whatsoever but with much free time.<br> Contacts:
+                Marco Rondelli<br> CS University student at "Universita' degli studi di Parma"<br> Currently having no personal projects whatsoever but with much free time.<br> Contacts:
                 <br>
                 <a href="mailto:marco-affari@outlook.com">marco-affari@outlook.com</a><br>
                 <a href="mailto:marcorondelli1+maruko@gmail.com">marcorondelli1+maruko@gmail.com</a><br> MarkGotLasagna#6113 (Discord)<br> @MarkGotLasagna (Telegram)
